Add stub for login/signup

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "node-uuid": "~1.4.3",
     "purecss": "~0.6.0",
     "angular-scroll-glue": "~2.0.5",
-    "better-dateinput-polyfill": "~1.5.2"
+    "better-dateinput-polyfill": "~1.5.2",
+    "angular-ui-router": "~0.2.14"
   }
 }
